NLP TP/texts/robotics/robotics.stackexchange_0000028679.txt
Q:

Why does the spring joint plugin not work?

I followed the example here and created a model plugin, that at each update call this function:
  void SpringJointPlugin::OnUpdate()
  {
    this->current_angle = this->joint_ptr_->GetAngle(0).Radian();
    this->joint_ptr_->SetForce( 0, (this->rest_angle-this->current_angle)*this->stiffness);
  }

the joint_ptr_ is of physics::JointPtr format. When I try to build this plugin, I get error
SpringJointPlugin.cc:80:45: error: ‘class gazebo::physics::Joint’ has no member named ‘GetAngle’; did you mean ‘GetForce’?
     this->current_angle = this->joint_ptr_->GetAngle(0).Radian();
                                             ^~~~~~~~
                                             GetForce

When I look into the documentation, this method is listed. When I use the the GetForce method as suggested, or any other function listed in the documentation, it still gives me errors.
Why and how to fix this?

Originally posted by kumpakri on Gazebo Answers with karma: 755 on 2018-12-06
Post score: 0

A:

You're looking at the documentation for Gazebo 2, but I suspect you're not using that version. Take a look at the migration guide, the new function from Gazebo 8 is Joint::Position.

Originally posted by chapulina with karma: 7504 on 2018-12-06
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by kumpakri on 2018-12-10:
Is there no up-to-date documentation for Gazebo 9?

